added drop box button

--- a/projects/src/projectile-motion-application.html
+++ b/projects/src/projectile-motion-application.html
@@ -15,20 +15,20 @@
         }
 
         .top {
-            border-top: rgb(120, 120, 120) solid 5px;
-            border-left: rgb(120, 120, 120) solid 5px;
-            border-right: rgb(120, 120, 120) solid 5px;
+            border-top: rgb(120, 120, 120) solid 3px;
+            border-left: rgb(120, 120, 120) solid 3px;
+            border-right: rgb(120, 120, 120) solid 3px;
         }
 
         .middle {
-            border-left: rgb(120, 120, 120) solid 5px;
-            border-right: rgb(120, 120, 120) solid 5px;
+            border-left: rgb(120, 120, 120) solid 3px;
+            border-right: rgb(120, 120, 120) solid 3px;
         }
 
         .bottom {
-            border-left: rgb(120, 120, 120) solid 5px;
-            border-right: rgb(120, 120, 120) solid 5px;
-            border-bottom: rgb(120, 120, 120) solid 5px;
+            border-left: rgb(120, 120, 120) solid 3px;
+            border-right: rgb(120, 120, 120) solid 3px;
+            border-bottom: rgb(120, 120, 120) solid 3px;
         }
 
         #explanation {
@@ -37,17 +37,17 @@
             margin-right: auto;
             left: 5%;
             right: 5%;
-            bottom: 5px;
+            bottom: 3px;
             background-color: rgba(220, 220, 220, 0.7);
             padding: 3px;
             text-align: center;
-            border: rgb(120, 120, 120) solid 5px;
+            border: rgb(120, 120, 120) solid 3px;
         }
 
         #vars {
             position: absolute;
-            top: 30%;
-            bottom: 30%;
+            top: 25%;
+            bottom: 25%;
             left: 2px;
             list-style-type: none;
         }
@@ -56,6 +56,14 @@
             font-size: 1.2em;
             background-color: rgba(220, 220, 220, 0.7);
             padding: 3px;
+        }
+
+        #drop {
+            margin-top: 3px;
+            text-align: center;
+            border: rgb(120, 120, 120) solid 2px;
+            border-radius: 8%;
+            cursor: pointer;
         }
     </style>
 </head>
@@ -71,6 +79,7 @@
         <li id="y" class="middle">y: -</li>
         <li id="time" class="middle">Time:</li>
         <li id="t" class="bottom">t: -</li>
+        <li id="drop">Drop Box</li>
     </ul>
 
     <div id="explanation">
