Inclined Plane - Texts of description of this exercise

--- a/projects/inclined-plane.html
+++ b/projects/inclined-plane.html
@@ -34,14 +34,13 @@
 
         <div class="w3-container" id="about" style="text-align:justify;">
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc at lobortis orci. Duis neque augue, ultricies et justo id, congue ultrices velit. 
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. In neque lectus, semper eget tellus quis, 
-                porttitor tempor tortor. Integer ac molestie erat, eu pretium lacus. Etiam sit amet leo et leo 
-                consequat accumsan ut vitae ligula. Quisque fringilla lectus quis ultrices sollicitudin. Aliquam 
-                non elementum leo. Sed at arcu a quam sollicitudin vestibulum ut vitae turpis. Quisque gravida, 
-                leo ut iaculis euismod, nisl mauris commodo diam, ultricies ultrices mauris lacus at quam. Praesent 
-                lacinia interdum purus, vel laoreet ante semper in. Praesent hendrerit mauris auctor, laoreet diam 
-                in, ullamcorper augue.
+                This is a typical high school physics exercise. It involves a real situation of sliding of a block on an inclined plane and focuses on analyzing how the forces act on it in this scenario.
+                It is usually guided by three basic forces: Weight, Normal and Friction.<br>
+                We have the decomposition of the Weight on the X axis and the Y axis. The Normal force will act in the opposite direction to the Weight in Y and the frictional 
+                force will be opposite to the weight in X, so the greater the frictional force, the less the block will move or remain stationary, however, otherwise, the block will 
+                descend the inclined plane with greater or lesser speed depending on the frictional force.
+                The below application shows a simulation of this scenary with the forces diagram and the main equations.
+
             </p>
 
         </div>
@@ -149,10 +148,10 @@
 
         <div class="w3-panel w3-leftbar w3-serif">
             <h5><b>Reference:</b></h5>
-            <p><i> Weisstein, Eric W. "Platonic Solid." From MathWorld--A Wolfram Web Resource.
-                    https://mathworld.wolfram.com/PlatonicSolid.html </i></p>
-            <p><i>Heilbron, J.L. "Platonic solid." From Encyclopædia Britannica, inc. Web resource
-                    https://www.britannica.com/science/Platonic-solid</i></p>
+            <p><i>Tom Henderson, "Inclined Planes." From The Physics Classroom.
+                https://www.physicsclassroom.com/class/vectors/Lesson-3/Inclined-Planes#:~:text=In%20physics%2C%20a%20tilted%20surface%20is%20called%20an%20inclined%20plane.&text=As%20shown%20in%20the%20diagram,gravity%20and%20the%20normal%20force. </i></p>
+            <p><i>The Editors of Encyclopaedia Britannica, "Inclined Plane" From Encyclopædia Britannica, inc. Web resource
+                https://www.britannica.com/technology/inclined-plane</i></p>
         </div>
 
         <!-- End page content -->
