--- a/projects/projectile-motion.html
+++ b/projects/projectile-motion.html
@@ -80,6 +80,19 @@
                 </a>
             </div>
 
+            <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
+
+                <a href="./src/projectile-motion-application-vr.html" target="_" style="text-decoration: none;">
+                    <div class="more-modes w3-display-container"
+                        style="background: url('img/Projectile-Motion/blur-vr.jpg') center;">
+                        <div class="w3-padding" style="width:100%">
+                            <img src="img/icons/vr-icon.png" alt="fullscreen" style="width: 64px;" />
+                            <br />Virtual Reality
+                        </div>
+                    </div>
+                </a>
+            </div>
+
         </div>
         <!-- End of more modes -->
 
