added text projectile motion

--- a/projects/projectile-motion.html
+++ b/projects/projectile-motion.html
@@ -34,9 +34,16 @@
 
         <div class="w3-container" id="about" style="text-align:justify;">
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis expedita sunt adipisci facilis.
-                Voluptatibus, iste! Cumque, autem. Magnam temporibus, commodi odio expedita optio assumenda debitis
-                quisquam et nihil doloremque provident?
+                If an object thrown into the air and the only force which acts upon it is gravity, that object is under
+                projectile motion. Surely, there will always be the air resistance force, but we usually assume it is
+                negligible, since it is a good approximation when the object’s weight is large compared to the air
+                resistance force.
+            </p>
+
+            <p>
+                The motion can be split in two components: the vertical component (y) and the horizontal component (x).
+                The gravity pulls the object down, thus this force acts only on the velocity of the vertical component
+                (vy). The velocity in the horizontal component (vx) will remain constant along the object’s path.
             </p>
         </div>
 
