--- a/projects/projectile-motion.html
+++ b/projects/projectile-motion.html
@@ -101,6 +101,14 @@
             </div>
 
         </div>
+
+        <div class="w3-panel w3-leftbar w3-serif">
+            <h5><b>Reference:</b></h5>
+            <p>
+                <i> "What is 2D projectile motion?" From Khan Academy. Web Resource
+                    https://www.khanacademy.org/science/physics/two-dimensional-motion/two-dimensional-projectile-mot/a/what-is-2d-projectile-motion</i>
+            </p>
+        </div>
         <!-- End of more modes -->
 
         <!-- <div class="w3-container w3-padding-32 ">
