--- a/projects/src/projectile-motion-application.html
+++ b/projects/src/projectile-motion-application.html
@@ -31,7 +31,7 @@
             border-bottom: rgb(120, 120, 120) solid 3px;
         }
 
-        #explanation {
+        #info {
             position: absolute;
             margin-left: auto;
             margin-right: auto;
@@ -42,8 +42,7 @@
             padding: 3px;
             text-align: center;
             border: rgb(120, 120, 120) solid 3px;
-            overflow: scroll;
-            height: 20%;
+            max-height: 22.5%;
         }
 
         #vars {
@@ -84,7 +83,7 @@
         <li id="drop">Drop Box</li>
     </ul>
 
-    <div id="explanation">
+    <div id="info">
         The displacement along x-axis and y-axis formulas are given below:
         $$ \Delta x = v_xt.$$
         $$ \Delta y={v}_{0y}t-\frac{1}{2}{\mathrm{gt}}^{2}\\ .$$
