added AR to projectile motion project

--- a/projects/projectile-motion.html
+++ b/projects/projectile-motion.html
@@ -89,6 +89,20 @@
 
             <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
 
+                <a href="./src/projectile-motion-application-AR.html" target="_" style="text-decoration: none;">
+                    <div class="more-modes w3-display-container"
+                        style="background: url('img/Projectile-Motion/blur-ar.jpg') center;">
+                        <div class="w3-padding" style="width:100%">
+                            <img src="img/icons/fullscreen-icon.png" alt="Augmented Reality icon"
+                                style="width: 64px;" />
+                            <br />Augmented Reality
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
+
                 <a href="./src/projectile-motion-application-vr.html" target="_" style="text-decoration: none;">
                     <div class="more-modes w3-display-container"
                         style="background: url('img/Projectile-Motion/blur-vr.jpg') center;">
