--- a/projects/src/inclined-plane-application-AR.html
+++ b/projects/src/inclined-plane-application-AR.html
@@ -96,12 +96,10 @@
     <body>
         <div id="webgl-output" ></div>
         <div id="informations" style="position: absolute; width: 65%; height: 50%;
-        background-color: rgba(7, 7, 9, 0.8); display: none; z-index: 1000; border: 2px solid #000 
-        ">
-            <div id="content" style="color: #ffffff; 
+        display: none; z-index: 1000; ">
+            <div id="content" style="color: #ffffff;
             z-index: 1001; width: 100%; height: 100%; overflow-y: auto; overflow-x: hidden;">
-                
-                <table >
+                <table style="background-color: rgba(7, 7, 9, 0.8); border: 2px solid #000 ">
                     <tr>
                         <th colspan="1" style="font-size: 1.3em; text-align: center;">
                             Informations <span id='close2'>X</span>
