--- a/projects/src/projectile-motion-application-VR.html
+++ b/projects/src/projectile-motion-application-VR.html
@@ -36,16 +36,23 @@
     <script>
         AFRAME.registerComponent('move', {
             init: function () {
-                this.gamepad;
                 this.obj = this.el.object3D;
                 this.velocity = 50;
+                this.vx = this.velocity;
+                this.vz = 0;
+                this.radiusSquared = 250000; // sqrt(250,000) = 500
+                this.distanceSquared;
+
+                this.randomizePosition();
+                this.el.setAttribute('velocity', { x: this.vx, y: 0, z: this.vz });
+
                 this.crate = this.el.sceneEl.querySelector('#crate');
+
                 this.TrajectoryPath = this.ProjectileCurve();
                 this.path;
                 this.trajectory;
                 this.material = new THREE.LineBasicMaterial({ color: 0xff0000, transparent: true, opacity: 0.5 })
 
-                this.el.setAttribute('velocity', { x: this.velocity, y: 0, z: 0 });
 
                 this.path = new this.TrajectoryPath(new THREE.Vector3(0, -1, 0), 0, 0, 0, 0);
                 this.trajectory = new THREE.Line(
@@ -53,12 +60,6 @@
                     this.material
                 );
                 this.el.sceneEl.setObject3D('trajectory', this.trajectory);
-
-                window.addEventListener('keydown', (e) => {
-                    if (e.keyCode === 32) {
-                        this.dropBox();
-                    }
-                });
 
                 const self = this;
                 let controlsEl = document.querySelector('[button-controls]');
@@ -69,41 +70,58 @@
                 this.crate.addEventListener('collide', () => {
                     self.crate.setAttribute('velocity', { x: 0, y: 0, z: 0 });
                     if (self.crate.object3D.visible) self.crate.components.sound.playSound();
-                })
+                });
             },
             tick: function (time, delta) {
-                if (this.obj.position.x > 300 || this.obj.position.x < -300) {
-                    this.velocity *= -1;
-                    this.obj.rotation.y *= -1;
-                    this.obj.position.x = this.obj.position.x > 0 ? 300 : -300;
-                    this.el.setAttribute('velocity', { x: this.velocity, y: 0, z: 0 });
-                }
+                this.distanceSquared = (this.obj.position.x * this.obj.position.x) + (this.obj.position.z * this.obj.position.z);
 
-                this.gamepad = navigator.getGamepads()[0];
+                if (this.distanceSquared > this.radiusSquared) {
+                    this.obj.visible = false;
+                    this.el.setAttribute('velocity', { x: 0, y: 0, z: 0 });
 
-                if (!this.gamepad) return;
+                    this.randomizePosition();
 
-                if (this.gamepad.buttons.some(btn => btn.pressed)) {
-                    this.dropBox();
+                    const self = this;
+                    setTimeout(() => {
+                        self.obj.visible = true;
+                        self.el.setAttribute('velocity', { x: this.vx, y: 0, z: this.vz });
+                    }, 100);
                 }
             },
             dropBox: function () {
                 this.crate.object3D.visible = true;
                 this.crate.body.position.set(this.obj.position.x, this.obj.position.y, this.obj.position.z)
                 this.crate.body.angularVelocity.set(0, 0, 0);
-                this.crate.body.velocity.set(this.velocity, 0, 0);
+                this.crate.body.velocity.set(this.vx, 0, this.vz);
 
                 this.path = new this.TrajectoryPath(
                     this.obj.position,
                     this.velocity,
-                    this.obj.rotation.y * 2,
                     0,
+                    this.obj.rotation.y - (Math.PI / 2),
                     9.8,
                     10
                 );
                 this.path = this.path.getPoints(30)
                 this.trajectory.geometry = new THREE.BufferGeometry().setFromPoints(this.path);
                 this.trajectory.geometry.needsupdate = true;
+            },
+            randomizePosition: function () {
+                let x, z, theta;
+
+                // x^2 + z^2 = r^2
+                x = Math.floor(Math.random() * this.radiusSquared);
+                z = this.radiusSquared - x;
+
+                this.obj.position.x = Math.sqrt(x) * (Math.random() > 0.5 ? 1 : -1);
+                this.obj.position.z = Math.sqrt(z) * (Math.random() > 0.5 ? 1 : -1);
+                this.obj.position.y = Math.random() * 200 + 50;// random values in the interval [50, 250)
+
+                theta = Math.atan(this.obj.position.z / this.obj.position.x);
+                this.obj.rotation.y = (Math.PI / 2) - theta;
+
+                this.vx = this.velocity * Math.cos(theta);
+                this.vz = this.velocity * Math.sin(theta);
             },
             ProjectileCurve: function () {
                 function ProjectileCurve(p0, velocity, verticalAngle, horizontalAngle, gravity, scale) {
@@ -176,23 +194,23 @@
 
         <a-sky id="skyBox" material="src: #skyBoxMap" radius="700"></a-sky>
 
-        <a-plane id="ground" material="src: #grass; repeat: 140, 60" position="0 0 0" rotation="-90 0 0" width="1400"
-            height="500" static-body>
+        <a-plane id="ground" material="src: #grass; repeat: 140, 140" position="0 0 0" rotation="-90 0 0" width="1400"
+            height="1400" static-body>
         </a-plane>
 
         <a-box id="crate" src="#crateTexture" height="4" width="4" depth="4" position="-3 3 190" visible="false"
             dynamic-body="linearDamping: 0; angularDamping: 0.01;"
-            sound="src: #crateSound; poolSize: 2; refDistance: 50; volume: 3;">
+            sound="src: #crateSound; poolSize: 2; refDistance: 50; volume: 8; refDistance: 50; rolloffFactor: 1; distanceModel: exponential">
         </a-box>
 
         <a-entity id="airplane" gltf-model="#airplaneModel" position="0 200 -70" rotation="0 90 0"
             scale="0.25 0.25 0.25" body="type: dynamic; mass: 0; shape: none;"
-            sound="src: #airplaneSound; on: click; autoplay: true; loop: true;volume: 5; refDistance: 50; rolloffFactor: 1; distanceModel: exponential"
+            sound="src: #airplaneSound; on: click; autoplay: true; loop: true;volume: 7; refDistance: 50; rolloffFactor: 1.2; distanceModel: exponential"
             move>
         </a-entity>
 
-        <a-entity id="rig" position="-3 0 200">
-            <a-entity id="camera" camera position="0 1.5 0" look-controls>
+        <a-entity id="rig" position="0 0 0">
+            <a-entity id="camera" camera position="0 1.5 0" look-controls="pointerLockEnabled: true">
             </a-entity>
         </a-entity>
 
